drive-backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app: vault-api
